now on mobile the certications stack correctly

--- a/src/components/Certifications/certifications.css
+++ b/src/components/Certifications/certifications.css
@@ -101,7 +101,7 @@
 }
 
 @media (max-width: 767px) {
-    .certification-item {
+    .certification-item:nth-child(odd) {
         flex-direction: column-reverse;
     }
 
